--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
     "@babel/preset-env": "^7.10.4",
     "babel-loader": "^8.1.0",
     "css-loader": "^3.6.0",
+    "ejs": "^3.1.5",
+    "ejs-plain-loader": "^1.4.1",
     "eslint": "^7.5.0",
     "eslint-config-airbnb-base": "^14.2.0",
     "eslint-config-prettier": "^6.11.0",
